# tjplanner

./: data.json  language_courses.json  manage.py  output.txt  pyproject.toml  requirements-nonpoetry.txt
director/: pyvenv.cfg
director/Scripts/: activate  activate.bat
main/: admin.py  models.py  urls.py  views.py
main/management/commands/: make_courses.py  simple_course_list.py
main/migrations/: 0001_initial.py  0002_course_corequisites_course_description_and_more.py  0003_alter_course_course_id.py  0004_course_coreq_ids_course_prereq_ids.py  0005_alter_course_coreq_ids_alter_course_prereq_ids.py  0006_alter_course_coreq_ids_alter_course_prereq_ids.py  0007_alter_course_coreq_ids_alter_course_prereq_ids.py  0008_course_number.py  0009_course_sort.py
static/main/: index.js
staticfiles/: staticfiles.json
staticfiles/main/: index.e5e2b316a3a5.js  index.fa6b47143cf9.js
templates/: checkbox.widget.html  master.html
templates/main/: courses.partial.html  index.html
theme/static_src/: tailwind.config.js
tjplanner/: asgi.py  settings.py  urls.py  wsgi.py
